# oda-experiments

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  odarun.py  odatestsapp.py  odaworker.py  pytest.ini  requirements.txt  setup.cfg  setup.py  workflow-schema.json
odaexperiments/: app.py  aux.py  cli.py  compose.py  run.py  worker.py  workflow.py  workflow_cli.py
odaexperiments/templates/: objects.html  papers.html
odaexperiments/workflow/: compose.py  schema.py
templates/: add-form.html  dashboard.html  data.html  facts-about-integral.html  features.html  layout.html  objects.html  papers.html  view-data.html  view-workflows.html  viewdata.html  workflows.html
tests/: conftest.py  test_tests.py  test_workflow.py
