[bumpversion]
current_version = 0.7.16
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize = 
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values = 
	dev
	prod

# [bumpversion:part:build]

# [bumpversion:file:VERSION]

[bumpversion:file:setup.py]

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = oda-experiments
license = GPL-2+
license_file = COPYING
author = V.S.
author_email = vladimir.savchenko@gmail.com
url = https://odahub.io/
classifiers = 
	Development Status :: 4 - Beta
	Environment :: Console
	Intended Audience :: Science/Research
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: POSIX
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Internet
	Topic :: Scientific/Engineering :: Astronomy

[options]
include_package_data = True
packages = find:

install_requires = 
	lxml
	six
	coloredlogs
	path.py
	keyrings.cryptfile
	click
	pyyaml
	numpy
	click_aliases
        pymysql
        peewee
        flask>=2.1.0
        gunicorn
        pytest-flask
        keyring
        oda-knowledge-base[rdf,cwl]>=0.7.28
        Flask-JWT>=0.3.2
        itsdangerous==2.0
        jsonschema<4.0
        pylogstash_context==0.1.12
        simpler-ansi2html
        requests
        astroquery
        prettytable
        logging_tree
        werkzeug~=2.0.0
        



tests_require = 
	pytest

[options.package_data]
* = *.json

[options.extras_require]
notebook = 
	nb2workflow
	papermill
rdf = 
	rdflib
	rdflib-jsonld
cwl = 
	cwltool

oda = 
        oda-api[gw]>=1.1.30
        igwn-auth-utils[requests]==0.2.2

[options.entry_points]
console_scripts = 
 	oda-experiments = odaexperiments.cli:cli
